; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/comdlg32/extr_filedlgbrowser.c_COMDLG32_UpdateCurrentDir.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/comdlg32/extr_filedlgbrowser.c_COMDLG32_UpdateCurrentDir.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { %struct.TYPE_4__ }
%struct.TYPE_4__ = type { i32 }

@SHGDN_FORPARSING = common dso_local global i32 0, align 4
@MAX_PATH = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_5__*)* @COMDLG32_UpdateCurrentDir to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @COMDLG32_UpdateCurrentDir(%struct.TYPE_5__* %0) #0 {
  %2 = alloca %struct.TYPE_5__*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca i64, align 8
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %2, align 8
  %8 = call i32 @SHGetDesktopFolder(i32* %3)
  store i32 %8, i32* %5, align 4
  %9 = load i32, i32* %5, align 4
  %10 = call i64 @FAILED(i32 %9)
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %13

12:                                               ; preds = %1
  br label %45

13:                                               ; preds = %1
  %14 = load i32, i32* %3, align 4
  %15 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %16 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %15, i32 0, i32 0
  %17 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = load i32, i32* @SHGDN_FORPARSING, align 4
  %20 = call i32 @IShellFolder_GetDisplayNameOf(i32 %14, i32 %18, i32 %19, i32* %4)
  store i32 %20, i32* %5, align 4
  %21 = load i32, i32* %5, align 4
  %22 = call i64 @SUCCEEDED(i32 %21)
  %23 = icmp ne i64 %22, 0
  br i1 %23, label %24, label %42

24:                                               ; preds = %13
  %25 = load i32, i32* @MAX_PATH, align 4
  %26 = zext i32 %25 to i64
  %27 = call i8* @llvm.stacksave()
  store i8* %27, i8** %6, align 8
  %28 = alloca i32, i64 %26, align 16
  store i64 %26, i64* %7, align 8
  %29 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %30 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %29, i32 0, i32 0
  %31 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %30, i32 0, i32 0
  %32 = load i32, i32* %31, align 4
  %33 = load i32, i32* @MAX_PATH, align 4
  %34 = call i32 @StrRetToBufW(i32* %4, i32 %32, i32* %28, i32 %33)
  store i32 %34, i32* %5, align 4
  %35 = load i32, i32* %5, align 4
  %36 = call i64 @SUCCEEDED(i32 %35)
  %37 = icmp ne i64 %36, 0
  br i1 %37, label %38, label %40

38:                                               ; preds = %24
  %39 = call i32 @SetCurrentDirectoryW(i32* %28)
  br label %40

40:                                               ; preds = %38, %24
  %41 = load i8*, i8** %6, align 8
  call void @llvm.stackrestore(i8* %41)
  br label %42

42:                                               ; preds = %40, %13
  %43 = load i32, i32* %3, align 4
  %44 = call i32 @IShellFolder_Release(i32 %43)
  br label %45

45:                                               ; preds = %42, %12
  ret void
}

declare dso_local i32 @SHGetDesktopFolder(i32*) #1

declare dso_local i64 @FAILED(i32) #1

declare dso_local i32 @IShellFolder_GetDisplayNameOf(i32, i32, i32, i32*) #1

declare dso_local i64 @SUCCEEDED(i32) #1

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #2

declare dso_local i32 @StrRetToBufW(i32*, i32, i32*, i32) #1

declare dso_local i32 @SetCurrentDirectoryW(i32*) #1

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #2

declare dso_local i32 @IShellFolder_Release(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
